# mth

./: Cargo.toml  README.md
src/: basic.rs  decimal.rs  hex.rs  lib.rs  matrix.rs  ornstein_uhlenbeck_process.rs  polynomial.rs  price_distance.rs  probability_distribution.rs  scalar.rs  stat.rs  time_series.rs
src/erasure_code/: mod.rs  reed_solomon.rs
src/galois_field/: gf2pw.rs  gf3.rs  gf_u8.rs  mod.rs
src/matrix/: matrix.rs  mod.rs  xmatrix.rs
src/number/: decimal.rs  hex.rs  mod.rs  number.rs
