[package]
name = "mth"
version = "0.0.0"
authors = ["shawnwyckoff"]
edition = "2018"
license = "MIT"
readme = "README.md"
repository = "https://github.com/shawnwyckoff/mth"
documentation = "https://github.com/shawnwyckoff/mth"
homepage = "https://github.com/shawnwyckoff/mth"
description = """
Rust mathematics and algorithms library.
"""
keywords = ["math", "mathematics", "stat", "statistics", "algorithm"]
include = ["src/", "LICENSE", "README.md"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.docs.rs]
rustdoc-args = [ "--html-in-header", "katex-header.html" ]

[dependencies]
num = "0.2"
num-traits = "0.2"
rust_decimal = "1.6.0"
time = "0.2.16"
anyhow = "1.0"
rand = "0.7.3"